Wed Feb 27 23:27:21 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSKeyBindingTable.m ([-bindKey:toAction:]): Modified so
	that adding new multi-stroke keybindings with the same prefix
	doesn't discard all previous keybindings with the same prefix.

Wed Feb 27 23:16:47 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTextView.m ([-drawRect:]): Always clear the whole rect
	using the the background color before drawing the new glyphs.
	This makes sure we always clear away old glyphs.  This fixes the
	bug when deleting the last character in a text field.

2002-02-27  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSSimpleLayoutManager.m
	[_relocLayoutArray:offset:floatTrift:Change a NSLog() call to NSDebugLog().
	* Source/NSLayoutManager.m
	Implemented extra line fragment methods.
	* Source/NSTextView.m
	Implemented [moveToBeginningOfParagraph:] and [moveToEndOfParagraph:].
	* KeyBindings/DefaultKeyBindings.dict
	Uncommented HOME and END.
	
Wed Feb 27 19:58:12 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSCStringText.m: Obsolete file removed.
	* Headers/gnustep/gui/NSCStringText.h: Obsolete file removed.
	* Source/GNUmakefile (libgnustep-gui_OBJC_FILES): Removed NSCStringText.m
	(libgnustep-gui_HEADER_FILES): Removed NSCStringText.h.

Wed Feb 27 18:59:54 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/gui/NSInputManager.h (_insertControlKeystrokes): New ivar.
	* Source/NSInputManager.m ([-initWithName:host:]):
	Read the user default GSInsertControlKeystrokes and save it.
	* Source/NSInputManager.m ([-handleKeyboardEvents:client:]): When
	inserting literally a keystroke, if GSInsertControlKeystrokes is
	NO, and this is a control keystroke, beep but don't insert it.
	Beep when a function key not bound to anything is pressed.
	
Wed Feb 27 18:57:50 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSResponder.m ([-insertText:]): Added.

Wed Feb 27 18:54:43 2002  Nicola Pero  <nicola@brainstorm.co.uk>
